--- a/resource/localization/zh-CN/sw.properties
+++ b/resource/localization/zh-CN/sw.properties
@@ -1,1 +1,14 @@
 sw.missmodule=未检测到模块
+
+tool.sw_sphericaldeform_tool.name=顶点球面变形
+tool.sw_sphericaldeform_tool.desc=将会创建一个可裁剪像素的特殊实体绑定目标实体
+
+tool.sw_sphericaldeform_tool.sx=X
+tool.sw_sphericaldeform_tool.sy=Y
+tool.sw_sphericaldeform_tool.sz=Z
+tool.sw_sphericaldeform_tool.offset=坐标系修正
+
+tool.sw_sphericaldeform_tool.add=添加
+tool.sw_sphericaldeform_tool.edit=编辑
+tool.sw_sphericaldeform_tool.quit=退出
+tool.sw_sphericaldeform_tool.reset=重置
