--- a/resource/localization/zh-CN/sw.properties
+++ b/resource/localization/zh-CN/sw.properties
@@ -1,14 +1,16 @@
 sw.missmodule=未检测到模块
 
-tool.sw_sphericaldeform_tool.name=顶点球面变形
-tool.sw_sphericaldeform_tool.desc=将会创建一个可裁剪像素的特殊实体绑定目标实体
+tool.sw_sphericaldeform_tool.category=简单伤口
+tool.sw_sphericaldeform_tool.name=球面变形
+tool.sw_sphericaldeform_tool.desc=将圈起的顶点投影到椭球上, 适合创建在分布密集区域
 
 tool.sw_sphericaldeform_tool.sx=X
 tool.sw_sphericaldeform_tool.sy=Y
 tool.sw_sphericaldeform_tool.sz=Z
+tool.sw_sphericaldeform_tool.ws=伤口区域
+tool.sw_sphericaldeform_tool.bs=血液喷溅
 tool.sw_sphericaldeform_tool.offset=坐标系修正
 
-tool.sw_sphericaldeform_tool.add=添加
-tool.sw_sphericaldeform_tool.edit=编辑
-tool.sw_sphericaldeform_tool.quit=退出
-tool.sw_sphericaldeform_tool.reset=重置
+tool.sw_sphericaldeform_tool.apply=应用
+tool.sw_sphericaldeform_tool.bindpose=出厂姿势
+tool.sw_sphericaldeform_tool.print=输出参数
