--- a/resource/localization/zh-CN/sw.properties
+++ b/resource/localization/zh-CN/sw.properties
@@ -14,3 +14,5 @@ tool.sw_sphericaldeform_tool.offset=坐标系修正
 tool.sw_sphericaldeform_tool.apply=应用
 tool.sw_sphericaldeform_tool.bindpose=出厂姿势
 tool.sw_sphericaldeform_tool.print=输出参数
+tool.sw_sphericaldeform_tool.deformtex=变形部分纹理
+tool.sw_sphericaldeform_tool.projtex=血液纹理
