--- a/resource/localization/zh-CN/sw.properties
+++ b/resource/localization/zh-CN/sw.properties
@@ -1,18 +1,25 @@
 sw.missmodule=未检测到模块
+sw.versionhint=LUA插件版本:
 
-tool.sw_sphericaldeform_tool.category=简单伤口
-tool.sw_sphericaldeform_tool.name=球面变形
-tool.sw_sphericaldeform_tool.desc=将圈起的顶点投影到椭球上, 适合创建在分布密集区域
+tool.sw_tool.category=简单伤口
+tool.sw_tool.name=创建伤口
+tool.sw_tool.desc=为实体创建简单伤口, E键隐藏标记
 
-tool.sw_sphericaldeform_tool.sx=X
-tool.sw_sphericaldeform_tool.sy=Y
-tool.sw_sphericaldeform_tool.sz=Z
-tool.sw_sphericaldeform_tool.ws=伤口区域
-tool.sw_sphericaldeform_tool.bs=血液喷溅
-tool.sw_sphericaldeform_tool.offset=坐标系修正
+tool.sw_tool.sx=X
+tool.sw_tool.sy=Y
+tool.sw_tool.sz=Z
+tool.sw_tool.ws=伤口区域
+tool.sw_tool.bs=血液喷溅
+tool.sw_tool.offset=坐标系修正
 
-tool.sw_sphericaldeform_tool.apply=应用
-tool.sw_sphericaldeform_tool.bindpose=出厂姿势
-tool.sw_sphericaldeform_tool.print=输出参数
-tool.sw_sphericaldeform_tool.deformtex=变形部分纹理
-tool.sw_sphericaldeform_tool.projtex=血液纹理
+tool.sw_tool.apply=应用
+tool.sw_tool.bindpose=出厂姿势
+tool.sw_tool.reset=重置
+tool.sw_tool.deformtex=变形部分纹理
+tool.sw_tool.projtex=血液纹理
+
+sw.simpwound=椭球变形
+sw.simpwoundvertexlit=椭球变形-顶点光照
+sw.ellipclip=椭球剔除
+sw.ellipclipvertexlit=椭球剔除-顶点光照
+tool.sw_tool.shader=着色器
