--- a/resource/localization/zh-CN/sw.properties
+++ b/resource/localization/zh-CN/sw.properties
@@ -18,8 +18,11 @@ tool.sw_tool.reset=重置
 tool.sw_tool.deformtex=变形部分纹理
 tool.sw_tool.projtex=血液纹理
 
-sw.simpwound=椭球变形
-sw.simpwoundvertexlit=椭球变形-顶点光照
-sw.ellipclip=椭球剔除
-sw.ellipclipvertexlit=椭球剔除-顶点光照
+sw.simpwound=0椭球变形
+sw.simpwoundvertexlit=0椭球变形-光照
+sw.ellipclip=1椭球剔除
+sw.ellipclipvertexlit=1椭球剔除-光照
 tool.sw_tool.shader=着色器
+
+sw.depthtexclip=2射线剔除
+sw.depthtexclipvertexlit=2射线剔除-光照
