翻译文件更新

--- a/resource/localization/en/sw.properties
+++ b/resource/localization/en/sw.properties
@@ -29,3 +29,4 @@ sw.depthtexclipvertexlit=2 Ray Clip-Vertex Lit
 
 
 sw.err.unknowboneid=Unknown Bone ID
+tool.sw_tool.depthtex=Multi-Layer Depth Texture
