--- a/resource/localization/en/sw.properties
+++ b/resource/localization/en/sw.properties
@@ -30,3 +30,4 @@ sw.depthtexclipvertexlit=2 Ray Clip-Vertex Lit
 
 sw.err.unknowboneid=Unknown Bone ID
 tool.sw_tool.depthtex=Multi-Layer Depth Texture
+tool.sw_tool.litegorec=Lite Gore Compatibility
