完善信息打印功能 -- sw_core.lua 调整标记位姿计算频率 --sw_tool.lua

--- a/resource/localization/en/sw.properties
+++ b/resource/localization/en/sw.properties
@@ -1,5 +1,5 @@
 sw.missmodule=Module not detected
-sw.versionhint=Addon-LUA Version:
+sw.versionhint=LUA Version:
 
 tool.sw_tool.category=Simple Wound
 tool.sw_tool.name=Create Wound
@@ -31,3 +31,7 @@ sw.depthtexclipvertexlit=2 Ray Clip-Vertex Lit
 sw.err.unknowboneid=Unknown Bone ID
 tool.sw_tool.depthtex=Multi-Layer Depth Texture
 tool.sw_tool.litegorec=Lite Gore Compatibility
+tool.sw_tool.label.print=Press R Key Print
+tool.sw_tool.label.bone=Bone
+tool.sw_tool.label.lpos=Local Pos
+tool.sw_tool.label.lang=Local Ang
