--- a/resource/localization/zh-CN/sw.properties
+++ b/resource/localization/zh-CN/sw.properties
@@ -31,3 +31,7 @@ sw.depthtexclipvertexlit=2射线剔除-光照
 sw.err.unknowboneid=未知的骨骼ID
 tool.sw_tool.depthtex=多层深度纹理
 tool.sw_tool.litegorec=Lite Gore兼容
+tool.sw_tool.label.print=R键打印
+tool.sw_tool.label.bone=骨骼
+tool.sw_tool.label.lpos=相对位置
+tool.sw_tool.label.lang=相对角度
